fix on mobile responsive

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,10 @@ body {
   position: relative;
   overflow: hidden;
   padding-top: 120px;
+
+  @media all and (max-width: 767px) {
+    margin-top: -120px;
+  }
 }
 
 .color-red {
